--- a/tp2/tp2.ipynb
+++ b/tp2/tp2.ipynb
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> En el gráfico podemos observar que a partir del frame 50 el valor del score que mide la nitidez comienza a aumentar alcanzando un pico entre los valores  100 - 125, es decir entre estos tiempos la imagen está enfocada y luego comienza a disminuir hasta el final, lo que quiere decir que aumenta el grado de desefoque de toda la imagen. Es decir, la imagen en los tiempos de inicio y de final está desenfocada."
+    "En el gráfico podemos observar que a partir del frame 50 el valor del score que mide la nitidez comienza a aumentar alcanzando un pico entre los valores  100 - 125, es decir entre estos tiempos la imagen está enfocada y luego comienza a disminuir hasta el final, lo que quiere decir que aumenta el grado de desefoque de toda la imagen. Es decir, la imagen en los tiempos de inicio y de final está desenfocada."
    ]
   },
   {
@@ -359,6 +359,20 @@
     "    plt.ylabel('FM Score')\n",
     "    plt.title(f'Avg ROI\\'s FM Scores over Time - {grid} grid')\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Medición para los valores:\n",
+    "\n",
+    "| size (nxm)   | threshold | \n",
+    "|---|---|\n",
+    "| (3,3)        | 40  | \n",
+    "| (6,6)  | 30  | \n",
+    "| (5,10) |  20 | \n",
+    "|  (9,9) |  20 | \n"
    ]
   },
   {
@@ -661,6 +675,13 @@
    "source": [
     "score_grid((5,10), 30, 0.0007, \"./out/output_5x10_cpbd_roi_video.mov\", cpbd_score)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
