--- a/tp2/tp2.ipynb
+++ b/tp2/tp2.ipynb
@@ -479,36 +479,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-24T22:01:16.488880Z",
-     "start_time": "2024-11-24T22:01:16.480352Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def jnb_score(frame):\n",
-    "    gray_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
-    "    sobel_x = cv2.Sobel(gray_frame, cv2.CV_64F, 1, 0, ksize=3)\n",
-    "    sobel_y = cv2.Sobel(gray_frame, cv2.CV_64F, 0, 1, ksize=3)\n",
-    "    \n",
-    "    gradient_magnitude = np.sqrt(sobel_x**2 + sobel_y**2)\n",
-    "\n",
-    "    _, edges = cv2.threshold(gradient_magnitude, 50, 255, cv2.THRESH_BINARY)\n",
-    "\n",
-    "    edges = edges.astype(np.uint8)\n",
-    "    \n",
-    "    edge_dist_transform = cv2.distanceTransform(cv2.bitwise_not(edges), cv2.DIST_L2, 3)\n",
-    "\n",
-    "    jnb_threshold = 1.5  # A typical threshold value\n",
-    "    edge_widths = edge_dist_transform[edges > 0]\n",
-    "    return np.mean(edge_widths <= jnb_threshold)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false
@@ -553,8 +523,8 @@
       "Requirement already satisfied: zipp>=3.1.0 in /Users/agustindelavega/ai/vision_por_computadora/venv/lib/python3.9/site-packages (from importlib-resources>=3.2.0->matplotlib>=2.0.0->cpbd) (3.20.2)\r\n",
       "Requirement already satisfied: six>=1.5 in /Users/agustindelavega/ai/vision_por_computadora/venv/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib>=2.0.0->cpbd) (1.16.0)\r\n",
       "\r\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\r\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\r\n"
+      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m A new release of pip available: \u001B[0m\u001B[31;49m22.3.1\u001B[0m\u001B[39;49m -> \u001B[0m\u001B[32;49m24.3.1\u001B[0m\r\n",
+      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m To update, run: \u001B[0m\u001B[32;49mpip install --upgrade pip\u001B[0m\r\n"
      ]
     }
    ],
